--- a/config.json
+++ b/config.json
@@ -1,5 +1,11 @@
 {
   "ConnectionStrings": {
     "FoodEaterDB": "Data Source=DESKTOP-CPCQ6Q4\\SQLEXPRESS;Initial Catalog=FoodEaterDB;Integrated Security=True;Connect Timeout=30;MultipleActiveResultSets = true;"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning"
+    }
   }
 }
