29. Autocomplete - search bar

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/Pomoc_Naukowa_1_Lacznie_Z_Baza_Danych.docx
+/Pomoc_Naukowa_2_Entity_Framework.docx
