--- a/FoodEaterRecipes.csproj
+++ b/FoodEaterRecipes.csproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Pomoc_Naukowa_1_Lacznie_Z_Baza_Danych.docx" />
+    <None Remove="Pomoc_Naukowa_2_Entity_Framework.docx" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.14">
