43. Creating angular components - ingredientCreator & recipeCreator 44. Fixing bugs & refactoring 45. Changing favicon 46. Adding MaterialUI Angular library 47. ingredientCreator ingredient search and modification

--- a/client/angular.json
+++ b/client/angular.json
@@ -50,9 +50,13 @@
               "src/assets"
             ],
             "styles": [
+              "src/custom-theme.scss",
               "src/styles.css"
+
             ],
-            "scripts": []
+            "scripts": [
+
+            ]
           },
           "configurations": {
             "production": {
