71. Fixed Recipe view nutrient calculations

--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,4 @@ MigrationBackup/
 FodyWeavers.xsd
 /Pomoc_Naukowa_1_Lacznie_Z_Baza_Danych.docx
 /Pomoc_Naukowa_2_Entity_Framework.docx
+/wwwroot/src
